--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -7,6 +7,7 @@ font = "sans serif"
 
 [server]
 headless = true
-port = 8501
+port = 8080
+address = "0.0.0.0"
 enableCORS = false
 enableXsrfProtection = true
