--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-streamlit>=1.31.0
-pandas>=2.2.0
-plotly>=5.18.0
-pydeck>=0.8.0
-requests>=2.31.0
-numpy>=1.26.0
-pyarrow>=14.0.0
+streamlit==1.39.0
+pandas==2.2.3
+plotly==5.24.1
+pydeck==0.9.1
+requests==2.32.3
+numpy==1.26.4
