Increase memory to 2GB and add Streamlit env vars

--- a/fly.toml
+++ b/fly.toml
@@ -9,6 +9,10 @@ primary_region = "iad"
 
 [env]
   PORT = "8080"
+  STREAMLIT_SERVER_PORT = "8080"
+  STREAMLIT_SERVER_ADDRESS = "0.0.0.0"
+  STREAMLIT_SERVER_HEADLESS = "true"
+  STREAMLIT_BROWSER_GATHER_USAGE_STATS = "false"
 
 [http_service]
   internal_port = 8080
@@ -21,4 +25,4 @@ primary_region = "iad"
 [[vm]]
   cpu_kind = "shared"
   cpus = 1
-  memory_mb = 1024
+  memory_mb = 2048
